--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "8.1.0",
-    "eslint": "4.14.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "eslint": "4.14.0",
     "eslint-plugin-flowtype": "2.40.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -16,6 +16,7 @@
     "flow-typed": "2.2.3",
     "husky": "0.14.3",
     "jest-expo": "^24.0.0",
+    "mobx-react-devtools": "^5.0.1",
     "react-native-scripts": "1.8.1",
     "react-test-renderer": "16.2.0"
   },
