--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ios": "react-native-scripts ios",
     "test": "yarn jest && flow && eslint .",
     "jest": "node node_modules/jest/bin/jest.js",
-
+    "precommit": "*removed yarn test"
   },
   "jest": {
     "preset": "jest-expo",
