--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "yarn jest && flow && eslint .",
-    "jest": "node node_modules/jest/bin/jest.js",
-
+    "ios": "react-native-scripts ios"
   },
   "jest": {
     "preset": "jest-expo",
