--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^24.0.0",
     "lodash": "4.17.4",
     "mobx": "3.4.1",
     "mobx-react": "4.3.5",
     "native-base": "2.3.5",
+    "qs": "^6.5.2",
     "react": "16.2.0",
     "react-native": "0.51.0",
     "react-navigation": "1.0.0-beta.21"
