--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^24.0.0",
+    "expo": "^25.0.0",
     "lodash": "4.17.4",
     "mobx": "3.4.1",
     "mobx-react": "4.3.5",
     "native-base": "2.3.5",
     "qs": "^6.5.2",
     "react": "16.2.0",
-    "react-native": "0.51.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-navigation": "1.0.0-beta.21"
   }
 }
